@@ -1,3 +1,0 @@
-name = Blocks
-description = Manage the location and appearance of blocks in FlightPath
-core = 6.x 
