@@ -1,9 +1,0 @@
-.blocks-table {
-  width: 100%;
-}
-
-.block-module-name {
-  background-color: #eee;
-  border-top: 1em solid white;
-  padding: 5px;  
-} 
