@@ -2644,10 +2644,8 @@ function system_display_login_page() {
   fp_add_css(fp_get_module_path("system") . "/css/style.css");  
 
   
-  $top_blocks = blocks_render_blocks("system_login", "top");
-  $bottom_blocks = blocks_render_blocks("system_login", "bottom");
-  $left_col_blocks = blocks_render_blocks("system_login", "left_col");
-  $right_col_blocks = blocks_render_blocks("system_login", "right_col");
+  $login_form = fp_render_form("system_login_form");
+  
   
   
   $rtn .= "<noscript>
@@ -2660,23 +2658,14 @@ function system_display_login_page() {
     
   $rtn .= $top_blocks;
   $rtn .= "<div class='login-content-div'>";
-  if ($left_col_blocks) {
-    $rtn .= "        
-       <div class='left-side-content'>
-        $left_col_blocks
-       </div>";
-  }
-  if ($right_col_blocks) {
-    $rtn .= "     
-      <div class='right-side-content'>
-        $right_col_blocks  
-       </div>
-    ";
-  }    
+  
+  $rtn .= "        
+     <div class='left-side-content'>
+      $login_form
+     </div>";
+
+      
   $rtn .= "</div>";
-  if ($bottom_blocks) {
-    $rtn .= $bottom_blocks;
-  }
    
   
   
@@ -3366,45 +3355,6 @@ function z__system_display_main_page() {
   
 }
 
-
-function system_blocks() {
-  return array(
-    "tools" => t("Tools menu"),
-    "admin_tools" => t("Admin Tools menu"),
-    "login_form" => t("Login form"),
-  );
-}
-
-
-function system_render_block($delta) {
-  $block = array();
-
-
-  if ($delta == "tools") {    
-    $block["title"] = t("Tools");
-    $block["body"] = fp_render_menu_block("", "tools");
-    
-  }
-  
-  if ($delta == "admin_tools") {
-    $block["title"] = t("Administrative Tools");
-    $block["body"] = fp_render_menu_block("", "admin-tools");
-  }
-  
-  if ($delta == "login_form") {
-    $block["title"] = t("Please log in below...");
-    $block["body"] = fp_render_form("system_login_form");
-  }
-  
-  
-  // We don't want empty blocks to show up at all.
-  if ($block["body"] == "") {
-    return FALSE;
-  }
-  
-  
-  return $block;
-}
 
 
 
